# Parkour

./: .gitignore  CMakeLists.txt  README.md  capHead.spec  game.cpp  game_level.cpp  game_object.cpp  glad.c  main.cpp  particle_generator.cpp  pipe_server.cpp  post_processor.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  text_renderer.cpp  texture.cpp
capHead/: Mtcnndnn.py  cameraCalibration.py  capHead.py
include/: game.h  game_level.h  game_object.h  particle_generator.h  pipe_server.h  post_processor.h  resource_manager.h  shader.h  sprite_renderer.h  text_renderer.h  texture.h
include/glad/: glad.h
shaders/: particle.vs  post_processing.frag  post_processing.vs
